# mllibprodest

./: .gitignore  HOW-TO-BUILD.md  README.md  pyproject.toml  setup.cfg
docs/: howto_make_docs.txt  index.html
docs/mllibprodest/: index.html  interfaces.html  provider.html  shared_classes.html  utils.html
docs/mllibprodest/initiators/: index.html  model_initiator.html
docs/mllibprodest/providers_types/: index.html  local_provider.html  minio_provider.html  mlflow_provider.html  utils.html
docs/mllibprodest/validators/: index.html  test.html
docs/templates/: index.html
docs/templates/training_model/: index.html  train.html
docs/templates/worker_pub/: index.html  mytest_pub.html  pub.html  test_pub.html  utils.html
docs/templates/worker_pub/models/: index.html  pub1.html  utils.html
docs/templates/worker_retrain/: index.html  mytest_retrain.html  retrain.html  test_retrain.html  utils.html
docs/templates/worker_retrain/models/: index.html  retrain1.html  utils.html
src/mllibprodest/: interfaces.py  provider.py  shared_classes.py  utils.py
src/mllibprodest/initiators/: model_initiator.py
src/mllibprodest/providers_types/: local_provider.py  minio_provider.py  mlflow_provider.py  utils.py
src/mllibprodest/validators/: test.py
templates/training_model/: train.py
templates/worker_pub/: mytest_pub.py  params.conf  pub.py  test_pub.py  utils.py
templates/worker_pub/models/: pub1.py
templates/worker_pub/temp_area/: README.txt
templates/worker_retrain/: mytest_retrain.py  params.conf  retrain.py  test_retrain.py
templates/worker_retrain/models/: retrain1.py  utils.py
