[build-system]
requires = ['setuptools==70.1.1']
build-backend = "setuptools.build_meta"

[project]
name = "mllibprodest"
version = "1.8.6"
license = {text = "GPLv3"}
authors = [
  { name="Instituto de Tecnologia da Informação e Comunicação do Espírito Santo (PRODEST)", email="prodest@prodest.es.gov.br" },
]
description = "Biblioteca de Machine Learning (ML) do Prodest."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Portuguese (Brazilian)"
]
dependencies = ['minio==7.2.7', 'python-dotenv==1.0.1', 'mlflow==2.14.1', 'boto3==1.34.133']
keywords = ['Prodest', 'ML', 'lib', 'stack']

[project.urls]
"Homepage" = "https://github.com/prodest/mllibprodest"
"Bug Tracker" = "https://github.com/prodest/mllibprodest/issues"
"Documentation" = "https://prodest.github.io/mllibprodest"
