[build-system]
requires = ['setuptools>=80.9.0']
build-backend = "setuptools.build_meta"

[project]
name = "mllibprodest"
version = "1.8.9"
license = "GPL-3.0-or-later"
authors = [
  { name="Instituto de Tecnologia da Informação e Comunicação do Espírito Santo (PRODEST)", email="prodest@prodest.es.gov.br" },
]
description = "Biblioteca de Machine Learning (ML) do Prodest."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese (Brazilian)"
]
dependencies = ['minio==7.2.15', 'python-dotenv==1.1.1', 'mlflow==3.1.1', 'boto3==1.39.4']
keywords = ['Prodest', 'ML', 'lib', 'stack']

[project.urls]
"Homepage" = "https://github.com/prodest/mllibprodest"
"Bug Tracker" = "https://github.com/prodest/mllibprodest/issues"
"Documentation" = "https://prodest.github.io/mllibprodest"
